--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,26 @@
 ---
-# defaults file for wireguard
+wireguard_networks: []
+# wireguard_networks:
+#   - wg0
+# wireguard_wg0_peers:
+#   - foobar:
+#       public_key:
+#       allowed_ips:
+#       # endpoint:
+#       # preshared_key:
+#       # persistent_keepalive:
+
+# wireguard_wg0_interface:
+#   address:
+#   private_key:
+#   # listen_port:
+#   # fw_mark:
+#   # dns: []
+#   # MTU:
+#   # Table:
+#   # pre_up: []
+#   # post_up: []
+#   # pre_down: []
+#   # post_down: []
+#   # save_config:
+
