--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,4 @@
 ---
-# tasks file for wireguard
+- include_tasks: "{{ ansible_os_family | lower }}_packages.yml"
+- include_tasks: configure_network.yml
+  with_items: "{{ wireguard_networks }}"
