--- a/tasks/configure_network.yml
+++ b/tasks/configure_network.yml
@@ -1,4 +1,28 @@
 ---
+- name: Read private key {{ item }}
+  stat:
+    path: "/etc/wireguard/privatekey_{{ item }}"
+  register: privatekey_{{ item }}
+  when: wireguard_manage_services
+
+- name: Generate wireguard keys {{ item }}
+  shell: "umask 077; wg genkey | tee /etc/wireguard/privatekey_{{ item }} | wg pubkey > /etc/wireguard/publickey_{{ item }}"
+  when:
+    - not privatekey_{{ item }}.stat.exists
+    - wireguard_manage_services
+
+- name: Read private key {{ item }}
+  slurp:
+    src: "/etc/wireguard/privatekey_{{ item }}"
+  register: private_{{ item }}
+  when: wireguard_manage_services
+
+- name: Read public key {{ item }}
+  slurp:
+    src: "/etc/wireguard/publickey_{{ item }}"
+  register: public_{{ item }}
+  when: wireguard_manage_services
+
 - name: Configure {{ item }}
   template:
     src: wgX.conf.j2
