Set correct permissions for config file

--- a/tasks/configure_network.yml
+++ b/tasks/configure_network.yml
@@ -3,6 +3,7 @@
   template:
     src: wgX.conf.j2
     dest: /etc/wireguard/{{ item }}.conf
+    mode: 0600
   register: configuration
 
 - name: Enable wg-quick@{{ item }} service
