--- a/tasks/ubuntu_repositories.yml
+++ b/tasks/ubuntu_repositories.yml
@@ -1,6 +1,8 @@
 ---
 - name: Add Ubuntu repositories
-  apt_repository:
-    repo: 'ppa:wireguard/wireguard'
-    state: present
+  become: true
+  # Use the builtin Ubuntu capability for adding universe, within which wireguard lives
+  command: "add-apt-repository universe"
+  register: adduniverserepo
+  changed_when: "'already enabled' not in adduniverserepo.stdout"
   when: ansible_distribution == 'Ubuntu'
